# ArchPackageBot

./: .env.dev  .gitignore  LICENSE  README.md  pyproject.toml
ArchPackageBot/plugins/help/: __init__.py
ArchPackageBot/plugins/pkg_helper/: __init__.py  archpkg.py
